2001-06-07  Alex Samuel  <samuel@codesourcery.com>

	* qm/common.py (format_time): New function.
	(parse_time): Likewise.
	(timegm): Import or define here.
	* qm/fields.py (SetField.FormatValueAsHtml): Don't coerce to
	string here.
	(TimeField): Rewrite class.
	* tests/unit/common/format_time1.qmt: New test.
	* tests/unit/common/parse_time1.qmt: Likewise.
	* tests/unit/common/parse_time2.qmt: Likewise.
	* tests/unit/common/parse_time3.qmt: Likewise.
	* tests/unit/common/parse_time4.qmt: Likewise.
	
2001-06-07  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/classes/python.py (ExecTest.Run): Add expression value
	to failing result.
	* qm/test/cmdline.py (Command.add_test_id): Get rsh program from rc.
	* qm/test/base.py (CommandFailedError): New class.
	(SubprocessEngine._Run): Catch it.
	(CommandEngine.RunTests): Raise it.
	(RshEngine._Run): Likewise.
	* share/tutorial/test/tdb/exec0.qmt: New file.
	* share/tutorial/test/tdb/exec1.qmt: Likewise.
	* share/tutorial/test/tdb/exec2.qmt: Likewise.
	* share/tutorial/test/tdb/test1.qmt: Remove.
	* share/tutorial/test/tdb/test2.qmt: Likewise.
	* share/tutorial/test/tdb/_classes/count.py: Add descriptions.
	* doc/manual/test-tour.xml: Rewrite completely.
	* doc/manual/test-reference.xml: Document some command-line stuff.
	* doc/manual/test-manual.xml: Major revisions and additions.
	* doc/qm.mod (fixme): New entity.

2001-06-06  Alex Samuel  <samuel@codesourcery.com>

	* doc/qm.mod (qmtest-cmd): New entity.
	(qmtrack-cmd): Likewise.
	* doc/manual/track-manual.xml (sec-issue-ids): New section.
	* doc/manual/test-manual.xml: Update.

2001-05-31  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/base.py (RemoteTestHost.__init__): Change default qmtest
	path. 

2001-05-31  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/cmdline.py (Command.remote_option_spec): New attribute.
	(Command.conflicting_options_spec): Update.
	(Command.commands_spec): Add --remote-hosts option.